<resources>
    <string name="app_name">HeartHealth</string>
    <string name="dashboard">Dashboard</string>
    <string name="reportes">Reportes</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="sistolica">Sistolica</string>
    <string name="diastolica">Diastolica</string>
    <string name="sis">Sis.</string>
    <string name="dia">Dia.</string>
    <string name="pulso">Pulso</string>
    <string name="nota">Nota</string>
    <string name="guardar">Guardar</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
</resources>