<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteActivity">

    <!-- Header -->
    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView92"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageUserNav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/user" />

        </TableRow>

    </TableLayout>

    <!-- Menu - Divider -->
    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/btnMenuDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dashboard"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/btnMenuReportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_bottom_blue"
                android:text="@string/reportes"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

        </TableRow>

    </TableLayout>

    <!-- Table - Buscador -->
    <TableLayout
        android:id="@+id/tableBuscador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/rounded_table"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3"
        tools:ignore="MissingConstraints">

        <!-- Table - Header -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Escriba el numero del mes"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </TableRow>
        <!-- Table - Row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/inputMes"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_input_white"
                android:ems="18"
                android:hint="Ejemplo: 01"
                android:inputType="number"
                android:paddingStart="@dimen/paddingStartEditText10dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="MissingConstraints,RtlSymmetry" />

        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="@color/white"
                android:text="Buscar"
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                tools:ignore="MissingConstraints" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_table"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/tableBuscador"
        tools:ignore="MissingConstraints">
        <!-- Table - Header -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTableHeaderFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtTableHeaderSistolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sis"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtTableHeaderDiastolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dia"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtTableHeaderPulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pulso"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

        </TableRow>
        <ListView
            android:id="@+id/listaDatosReporte"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />
    </TableLayout>




    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_download_pdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_share_24"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_download_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_download_24"
        tools:ignore="MissingConstraints" />-->


</androidx.constraintlayout.widget.ConstraintLayout>