<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Header -->
    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView92"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageUserNav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/user" />

        </TableRow>

    </TableLayout>

    <!-- Menu - Divider -->
    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/btnMenuDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_bottom_blue"
                android:text="@string/dashboard"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/btnMenuReportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reportes"
                android:textAlignment="center"
                android:textSize="18dp" />

        </TableRow>

    </TableLayout>

    <!-- Tabla -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_table"
        android:backgroundTint="@color/blue"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Hipotención < (100 - 120) < Hipertención -->
            <TextView
                android:id="@+id/sistolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="120"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <!-- Hipotención < (70 - 90) < Hipertención -->
            <TextView
                android:id="@+id/diastolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="80"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <!-- Bradricardia < (60 - 100) < Taquicardia -->
            <TextView
                android:id="@+id/pulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="60"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSistolica"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sis"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtDiastolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dia"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtPulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pulso"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </TableRow>

        <!--<TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtStatusSis"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="N"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtStatusDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="B"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtStatusPulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="A"
                android:textAlignment="center"
                android:textSize="20dp" />

        </TableRow>-->

    </TableLayout>

    <TableLayout
        android:id="@+id/tableReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_table"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="MissingConstraints">
        <!-- Table - Header -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTableHeaderFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtTableHeaderSistolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sis"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtTableHeaderDiastolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dia"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txtTableHeaderPulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pulso"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18dp" />

        </TableRow>
        <ListView
            android:id="@+id/listaDatos"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />
    </TableLayout>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>